Improve tab behavior and URL handling

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<title>Brandon Duffany</title>
+	<script src="/static/js/nav_head.js"></script>
+
 	<link href="http://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700" rel="stylesheet">
 	<link href="/static/css/main.css" rel="stylesheet" />
 	<link href="/static/css/main.desktop.css" rel="stylesheet"/>
@@ -27,7 +29,7 @@
     
     <div id="nav_spacer"></div>
 	<core-toolbar id="navbar">
-      <paper-tabs id="tabs" selected="all" self-end>
+      <paper-tabs id="tabs" self-end>
         <paper-tab name="home">HOME</paper-tab>
         <paper-tab name="about">ABOUT</paper-tab>
         <paper-tab name="contact">CONTACT</paper-tab>
