--- a/templates/posts/welcome.html
+++ b/templates/posts/welcome.html
@@ -1,3 +1,3 @@
 {% set fact = models['random_facts'].get_random_fact() %}
+<h1>Welcome!</h1>
 <p>Hey! My name's Brandon, and this is my site. Here, you can find out all sorts of things about me. For example: {{ fact|safe }}</p>
-<p>Right now, I'm working on adding a blog to my site. Stay tuned!</p>
