--- a/templates/main.html
+++ b/templates/main.html
@@ -7,61 +7,66 @@
   <script>
 /* For http://foo.com/some/path#hash, returns "some/path". */
 function get_path() {
-    return window.location.pathname.replace(/^\/+/, '');
+  return window.location.pathname.replace(/^\/+/, '');
 }
 
 /* If the user accesses http://foo.com/bar, redirect them to
  * http://foo.com/#bar. */
 if (get_path()) {
-    window.location = '/#' + get_path();
+  window.location = '/#' + get_path();
 }
   </script>
 
   <link href="http://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700" rel="stylesheet">
   <link href="/static/css/main.css" rel="stylesheet" />
-  <link href="/static/css/main.desktop.css" rel="stylesheet"/>
-
-  <script src="/static/vendor/polymer/platform/platform.js"></script>
-  <link rel="import" href="/static/vendor/polymer/font-roboto/roboto.html">
-  <link rel="import" href="/static/vendor/polymer/core-toolbar/core-toolbar.html">
-  <link rel="import" href="/static/vendor/polymer/paper-tabs/paper-tabs.html">
 </head>
 
-<body unresolved touch-action="auto" class="nojquery">
+<body class="nojquery">
 <div id="wrap">
 
-  <div id="site_header">
-    <div id="header_wrap">
+  <div id="navbar">
+    <ul id="nav-list">
+      <li><a href="#">Home</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+  </div>
+  <div id="left-column">
     <div id="site_title">
-      <img id="logo_text" src="/static/img/name_4.png" alt="Brandon Duffany" width="376" height="29"/>
-    </div>
+      <a href="#">
+      <img id="logo_text" src="/static/img/name_5.png" alt="Brandon Duffany"
+           width="158" height="84"/>
+      </a>
   	</div>
+    <div id="connect" class="subtleglow">
+      <div id="social-links">
+        <span>
+          <a href="http://github.com/bduffany" target="_new">
+          <img src="/static/img/octocat-24-2.png" width="24" height="24" alt="GitHub"/>
+          </a>    
+        </span>
+        <span>
+          <a href="https://www.linkedin.com/profile/view?id=282468071" target="_new">
+          <img src="/static/img/linkedin-24.png" width="24" height="24" alt="Linkedin"/>
+          </a>
+        </span>
+        <span>
+          <a href="https://www.facebook.com/brandon.duffany" target="_new">
+          <img src="/static/img/facebook-24.png" width="24" height="24" alt="facebook"/>
+          </a>
+        </span>
+        <span>
+          <a href="https://soundcloud.com/brandonduffany" target="_new">
+          <img src="/static/img/soundcloud-24.png" width="24" height="24" alt="SoundCloud"/>
+          </a>
+        </span>
+      </div>
+    </div>
   </div>
     
-  <div id="body_wrap">
-
-    <div id="nav_spacer"></div>
-    <core-toolbar id="navbar">
-      <paper-tabs id="tabs" self-end>
-        <paper-tab name="home">HOME</paper-tab>
-        <paper-tab name="about">ABOUT</paper-tab>
-        <paper-tab name="contact">CONTACT</paper-tab>
-      </paper-tabs>
-    </core-toolbar>
-
-  
+  <div id="right-column">
     <div id="site_body">
       <div id="maincontent">
         <!-- Content is dynamically loaded here. -->
-      </div>
-      <div id="footer" class="subtleglow">
-        <span id="copyright">&copy; 2013 Brandon Duffany.</span>
-        <span id="github">
-          <img src="/static/img/octocat-24.png" />
-          <span>
-            <a href="http://github.com/bduffany">bduffany</a> <span class="grayed">on GitHub</span>
-          </span>
-        </span>
       </div>
   	</div>
 
@@ -75,8 +80,6 @@ if (get_path()) {
 <script src="/static/vendor/jquery.transit.min.js"></script>
 
 <script src="/static/js/nav.js"></script>
-<script src="/static/js/sticky_navbar.js"></script>
-<script src="/static/js/sweet_animation.js"></script>
 
 </body>
 </html>
