--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -61,15 +61,16 @@ body {
   padding: $grid 0;
   margin: 0 auto;
   max-width: $site-width;
+  text-align: center;
 }
 
 #nav-list li {
-  display: inline-block;
+  @include inline-block;
   margin-right: 5px;
 }
 
 #nav-list a {
-  display: inline-block;
+  @include inline-block;
   border-left: 0px solid rgba(0, 0, 0, 0);
   text-transform: uppercase;
   border-radius: 2px;
@@ -95,6 +96,7 @@ ul.tags {
 }
 
 #page-header {
+  text-align: center;
   max-width: $site-width;
   margin: $grid-coarse auto;
 }
@@ -117,20 +119,14 @@ a.logo-link:active {
   font-size: 28px;
 }
 
-#site_title {
-  @include inline-block;
-}
-
 #footerleft {
   float: left;
 }
 
 #connect {
-  @include inline-block;
-
-  border-left: 1px dashed rgba(20, 20, 20, 0.2);
-  padding-left: $grid-coarse;
-  margin-left: $grid-coarse;
+  border-top: 1px dashed rgba(20, 20, 20, 0.2);
+  padding-top: $grid-coarse;
+  margin-top: $grid-coarse;
 }
 
 #social-links > span:not(:last-child) {
@@ -153,7 +149,9 @@ a.logo-link:active {
   @include transition(all, 750ms, cubic-bezier(0.080, 0.525, 0.315, 1.000));
 }
 
-.smooth-transition-150, #nav-list a, #social-links img {
+.smooth-transition-150,
+#nav-list a,
+#social-links img {
   @include transition(all, 150ms, cubic-bezier(0.080, 0.525, 0.315, 1.000));
 }
 
@@ -269,7 +267,7 @@ body {
 }
 
 #nav a {
-  display: inline-block;
+  @include inline-block;
   padding: $grid;
   width: auto;
   text-transform: uppercase;
@@ -278,5 +276,5 @@ body {
 
 #wrap {
   width: 100%;
-  padding: 0px;
+  padding: 0;
 }
